[gd_scene load_steps=3 format=3 uid="uid://dgvt58ltbeh6w"]

[ext_resource type="Script" path="res://Instanced Scenes/status_effect_instance.gd" id="1_h7x1q"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="2_jr7we"]

[node name="Status Effect Instance" type="Node"]
script = ExtResource("1_h7x1q")

[node name="Percent_Time" type="Node" parent="."]
script = ExtResource("2_jr7we")

[node name="End_Time" type="Node" parent="."]
script = ExtResource("2_jr7we")
one_shot = true

[node name="Ping_Time" type="Node" parent="."]
script = ExtResource("2_jr7we")

[connection signal="timeout" from="Percent_Time" to="." method="_on_percent_time_timeout"]
[connection signal="timeout" from="End_Time" to="." method="_on_end_time_timeout"]
[connection signal="timeout" from="Ping_Time" to="." method="_on_ping_time_timeout"]
